# webdav-viewer

./: index.html
src/: App.css  App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs
src-tauri/src/archive/: handlers.rs  types.rs
src-tauri/src/archive/formats/: common.rs  gzip.rs  mod.rs  tar.rs  tar_gz.rs  zip.rs
src-tauri/src/storage/: local_client.rs  manager.rs  mod.rs  oss_client.rs  traits.rs  webdav_client.rs
src/components/: ArchiveViewer.tsx  ConnectionPanel.tsx  ConnectionSelector.tsx  OSSConnectionForm.tsx  SplashScreen.tsx  StorageTypeSelector.tsx  VirtualizedFileList.tsx
src/hooks/: useTheme.ts
src/i18n/locales/en/: connection.ts
src/i18n/locales/zh/: connection.ts  errors.ts
src/services/: connectionStorage.ts
src/services/storage/: BaseStorageClient.ts  LocalStorageClient.ts  OSSStorageClient.ts  StorageManager.ts  index.ts  types.ts
