[package]
name = "webdav-viewer"
version = "0.1.0"
description = "WebDAV Viewer - A modern WebDAV file browser"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "webdav_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.5"
base64 = "0.21"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-util = "0.7"
brotli = "3.4"
lz4 = "1.24"
zstd = "0.13"
async-stream = "0.3"
bytes = "1.5"
quick-xml = "0.31"
urlencoding = "2.1"
dirs = "5.0"
# OSS 支持所需的依赖
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
log = "0.4"

